# gradelib

./: .coverage  404.html  CHANGELOG.md  Cargo.toml  README.md  README_TAIGA.md  TESTING.md  USAGE.md  gradelib.pyi  index.html  main.py  mkdocs.yml  pyproject.toml  repo_manager_typing_fix.patch  test_gradelib.py
.github/workflows/: check-version.yml  ci.yml  deploy-docs.yml  publish.yml
USAGE/: index.html
docs/: advanced-usage.md  github_oauth.md  index.html  index.md  pull-request-analysis.md
docs/advanced-usage/: index.html
docs/async_utilities/: index.html
docs/collaborator-analysis/: index.html
docs/github_oauth/: index.html
docs/issues-analysis/: index.html
docs/polars-usage/: index.html
examples/: README.md  analyze_commits_test.py  blame_test.py  branch_analysis.csv  branch_test.py  clone_repos.py  clone_test.py  code_reviews_test.py  collaborators_test.py  comments_test.py  commit_history.csv  issues_test.py  pull_request_analysis.csv  pull_requests_test.py  run_all_tests.py  taiga_example.py  test_all_functions.py  test_analyze_branches.py  test_analyze_commits.py  test_bulk_blame.py  test_clone_repo.py  test_fetch_collaborators.py  test_fetch_issues.py  test_fetch_pull_requests.py  test_github_init.py  test_setup_async.py
github/: __init__.py
gradelib/: __init__.py  gradelib.pyi
patches/: 0001-Clean-up.-typed-patch.patch
search/: search_index.json
src/: code_review.rs  collaborators.rs  lib.rs  repo.rs  utils.rs
tests/: __init__.py  run_all_tests.py  test_basic.py  test_github_provider.py  test_rust_integration.rs  test_utils.py
(+45 files in other folders)
