[package]
name = "gradelib"
version = "0.1.0"
edition = "2021"
authors = ["Ben Meddeb <bmeddeb@asu.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bmeddeb/gradelib"

[lib]
name = "gradelib"         # The name Python will import
crate-type = ["cdylib"]    # Compile as a dynamic library for Python

[dependencies]
# Core Git functionality
git2 = "0.20.1" # Check for latest stable version compatible with your needs

# Async runtime and utilities
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time"] } # Use a recent stable version
futures = "0.3"

# Python bindings
# Check for latest stable version and update features if needed
pyo3 = { version = "0.24.1", features = ["extension-module"] }

# Async integration for PyO3
pyo3-async-runtimes = { version = "0.24", features = ["attributes", "tokio-runtime"] }

# Other utilities
tempfile = "3.10"          # For temporary directories during clone
# once_cell = "1.19"         # We didn't end up needing this, can be removed if unused
regex = "1"                # For parsing repo slugs from URLs
lazy_static = "1.4"        # For static Regex initialization
rayon = "1"                # For parallel iteration

[profile.release]
lto = true          # Enable Link-Time Optimization for smaller/faster release builds
codegen-units = 1   # Optimize better at the cost of compile time
strip = true        # Strip symbols for smaller binary size

[workspace] # Optional Future updates !!